--- a/mapcracks/android/app/src/main/AndroidManifest.xml
+++ b/mapcracks/android/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
             android:name="flutterEmbedding"
             android:value="2" />
             <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="AIzaSyB_BCq0oZsuBcUYWs_yS2RlRaKTJL2-5XM"/>
+               android:value="API_KEY"/>
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
